# translation-api

./: .env  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  docker-compose.yaml  pyproject.toml
.github/copilot-instructions/: copilot-commit-instructions.md  copilot-test-instructions.md
.github/workflows/: check.yml  deploy-docker-image.yml  deploy-github-release.yml  release.yml
docs/: DEVELOPER.md  DOCKERHUB.md  README.md  TEMPLATE_SETUP.md
scripts/: pyinstaller.spec
src/: main.py
src/api/: server.py
src/api/dtos/: translate_dto.py  translate_result_dto.py
src/api/handlers/: global_exception_handler.py
src/api/routers/: health_check_router.py  translate_router.py
src/application/usecases/: translate_text_usecase.py
src/assets/mappings/: mbart_mapping.json  seamless_mapping.json
src/core/config/: app_config.py
src/core/cuda/: cuda_checker.py
src/core/logger/: logger.py
src/core/timer/: timer.py
src/data/factories/: translation_worker_factory.py
src/data/repositories/: directory_repository_impl.py  translation_model_repository_impl.py
src/data/workers/: mbart_translation_worker.py  seamless_translation_worker.py
src/domain/exceptions/: invalid_interval_error.py  invalid_language_format_error.py  language_mapping_error.py  language_not_found_error.py  unsupported_model_configuration_error.py  worker_not_running_error.py
src/domain/repositories/: directory_repository.py  translation_model_repository.py
src/domain/services/: language_mapping_service.py  translation_service.py
tests/: test_main.py
tests/api/: test_server.py
tests/api/dtos/: test_translate_dto.py  test_translate_result_dto.py
tests/api/middlewares/: test_process_time_middleware.py
tests/api/routers/: test_health_check_router.py  test_translate_router.py
tests/application/usecases/: test_translate_text_usecase.py
tests/core/config/: test_app_config.py
tests/core/cuda/: test_cuda_checker.py
tests/core/logger/: test_logger.py
tests/core/timer/: test_timer.py
tests/data/factories/: test_translation_worker_factory.py
tests/data/repositories/: test_directory_repository_impl.py  test_translation_model_repository_impl.py
tests/data/workers/: test_base_worker.py  test_mbart_translation_worker.py  test_seamless_translation_worker.py
tests/domain/services/: test_language_mapping_service.py  test_translation_service.py
